--- a/views/report_quotation.xml
+++ b/views/report_quotation.xml
@@ -6,8 +6,8 @@
     model="accountquotation.tire" 
     string="Cotización" 
     report_type="qweb-pdf" 
-    name="account_quotation_tire.report_quotation_view" 
-    file="account_quotation_tire.report_quotation" />
+    name="account_quotations_tire.report_quotation_view" 
+    file="account_quotations_tire.report_quotation" />
 
 
     <template id="report_quotation_view">
