--- a/views/report_quotation.xml
+++ b/views/report_quotation.xml
@@ -6,16 +6,18 @@
     model="accountquotation.tire" 
     string="Cotización" 
     report_type="qweb-pdf" 
-    name="account_quotations_tire.report_quotation_view" 
-    file="account_quotations_tire.report_quotation" />
-
+    name="account_quotation_tire.report_quotation_view" 
+    file="account_quotation_tire.report_quotation" />
+    <!-- cambiar a plutar en productiva -->
+  <!-- name="account_quotations_tire.report_quotation_view" 
+    file="account_quotations_tire.report_quotation"  -->
 
     <template id="report_quotation_view">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
                     <div class="page">
-                        <h1>Cotización <span style="font-size:38px" t-field="o.name"></span></h1>
+                        <h1 style="font-size:26px">Cotización <span style="font-size:28px" t-field="o.name"></span></h1>
                         <div>
                             <h5 style="display:inline; float:left;width:650px"  t-field="o.partner.name"></h5>
                             <p tyle="display:inlinel float:rigt"  class="lead" t-field="o.date"></p>
@@ -42,7 +44,7 @@
                                 <t t-foreach="o.quotation_line" t-as="line">
                                     <tr>
                                         <td>
-                                            <img t-if="line.product.image_small" t-att-src="image_data_uri(line.product.image_small)" alt="Logo" role="img"  style="height: 100px;width: 100px;"/>
+                                            <img t-if="line.product.image_small" t-att-src="image_data_uri(line.product.image_small)" alt="Logo" role="img"  style="height: 35px;width: 35px;"/>
                                             <!-- <img t-if="line.product.image" t-att-src="'data:image/jpg;base64,%s' % (line.product.image_variant,)" style="max-height:45pt;max-width:90%"/> -->
                                         </td>
                                         <td>
