--- a/views/wizard_report.xml
+++ b/views/wizard_report.xml
@@ -1,9 +1,25 @@
 <odoo>
 
- <report
+    <record model="report.paperformat" id="paperformat_order_easy_report">
+        <field name="name">paperformat.order.service.report</field>
+        <field name="default" eval="True"/>
+        <field name="format">A4</field>
+        <field name="page_width">0</field>
+        <field name="orientation">Landscape</field>
+        <field name="margin_top">30</field>
+        <field name="margin_right">5</field>
+        <field name="margin_bottom">10</field>
+        <field name="margin_left">5</field>
+        <field name="header_line" eval="False"/>
+        <field name="header_spacing">24</field>
+        <field name="dpi">90</field>
+    </record>
+
+    <report
         id="report_quotation"
         model="report.accountquotation.wizard"
         string="Cotizacion de llantas"
+        paperformat="paperformat_order_easy_report"
         report_type="qweb-pdf"
         name="account_quotation_tire.report_quo_wiz"
         menu="False"/>
@@ -13,47 +29,67 @@
             <!-- <t t-foreach="docs" t-as="o"> -->
                 <t t-call="web.external_layout">
                     <div class="page">
-                        <!-- <h1>Cotización <span style="font-size:38px" t-field="o.name"></span></h1> -->
-                        <!-- <div>
-                            <h5 style="display:inline; float:left;width:650px"  t-field="o.partner.name"></h5>
-                            <p tyle="display:inlinel float:rigt"  class="lead" t-field="o.date"></p>
-                        </div> -->
-                       <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%Y-%m-%d %H:%M')"/>   
-                       <p style="margin-botton:20px;"></p>
-
-                        <table class="table table-conden" >
+                        <table class="table table-conden" style="margin:20px">
                             <thead>
                                 <tr>
                                     <th></th>
                                     <th>Producto</th>
                                     <th>Precio</th>
-                                    <th>Precio con 2</th>
-                                    <th>Precio con 4</th>
+                                    <t t-if="mont_3 > 0">
+                                        <th>A 3 meses</th>
+                                    </t>
+                                    <t t-if="mont_6 > 0">
+                                        <th>A 6 meses</th>
+                                    </t>
+                                    <t t-if="mont_12 > 0">
+                                        <th>A 12 meses</th>
+                                    </t>
+                                    <t t-if="mont_18 > 0">
+                                        <th>A 18 meses</th>
+                                    </t>
                                 </tr>
                             </thead>
                             <tbody>
                                 <t t-foreach="docs" t-as="line">
                                     <t t-if="line.qty_enable > 0">
-                                        <t t-set="d_2" t-value="0"></t>
-                                        <t t-set="d_4" t-value="0"></t>
-                                        <tr>
-                                            <td>
-                                                <img t-if="line.image_small" t-att-src="image_data_uri(line.image_small)" alt="Logo" role="img"  style="height: 65px;width: 65px;"/>
+                                        <t t-set="d_3" t-value="0"></t>
+                                        <t t-set="d_6" t-value="0"></t>
+                                        <t t-set="d_12" t-value="0"></t>
+                                        <t t-set="d_18" t-value="0"></t>
+                                        <tr class="align-middle">
+                                            <td class="align-middle"> <!-- Imagen-->
+                                                <img t-if="line.image_small" t-att-src="image_data_uri(line.image_small)" alt="Logo" role="img"  style="height: 45px;width: auto;"/>
                                             </td>
-                                            <td>
+                                            <td class="align-middle"> <!-- Producto-->
                                                 <p style="font-size:14px" t-field="line.name"></p>
                                             </td>
-                                            <td>
+                                            <td class="align-middle"> <!-- Precio -->
                                             <p>$<span style="font-size:14px" t-field="line.list_price" t-field-options='{"widget": "monetary", "display_currency": "currency"}'></span></p>
                                             </td>
-                                            <td>
-                                                <t t-set="d_2" t-value="line.list_price - (line.list_price * (line.discount_level_1/100))"/>
-                                                <p>$<span style="font-size:14px" t-esc="d_2" t-esc-options='{"widget": "monetary", "display_currency": "line.currency_id"}'></span></p>
-                                            </td>
-                                            <td>
-                                                <t t-set="d_4" t-value="line.list_price - (line.list_price * (line.discount_level_2/100))"/>
-                                                <p>$<span style="font-size:14px" t-esc="d_4" t-esc-options='{"widget": "monetary", "display_currency": "line.currency_id"}'></span></p>
-                                            </td> 
+                                            <t t-if="mont_3 > 0">
+                                                <td class="align-middle"> <!-- a 3m-->
+                                                    <t t-set="d_3" t-value="line.list_price + (line.list_price * (mont_3/100))"/>
+                                                    <p>$<span style="font-size:14px" t-esc="'{0:,.2f}'.format(int(d_3))"></span></p>
+                                                </td>
+                                            </t>
+                                            <t t-if="mont_6 > 0">
+                                                <td class="align-middle"> <!-- a 6m-->
+                                                    <t t-set="d_6" t-value="line.list_price + (line.list_price * (mont_6/100))"/>
+                                                    <p>$<span style="font-size:14px" t-esc="'{0:,.2f}'.format(int(d_6))"></span></p>
+                                                </td> 
+                                            </t>
+                                            <t t-if="mont_12 > 0">
+                                                <td class="align-middle"> <!-- a 12m-->
+                                                    <t t-set="d_12" t-value="line.list_price + (line.list_price * (mont_12/100))"/>
+                                                    <p>$<span style="font-size:14px" t-esc="'{0:,.2f}'.format(int(d_12))"></span></p>
+                                                </td> 
+                                            </t>
+                                            <t t-if="mont_18 > 0">
+                                                <td class="align-middle"> <!-- a 18m-->
+                                                    <t t-set="d_18" t-value="line.list_price + (line.list_price * (mont_18/100))"/>
+                                                    <p>$<span style="font-size:14px"  t-esc="'{0:,.2f}'.format(int(d_18))"></span></p>
+                                                </td> 
+                                            </t>
                                         </tr>
                                     </t>
                                 </t>
